--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sqlite3": "~3.0.7"
   },
   "dependencies": {
-    "express": "~4.9.0",
+    "express": "~4.9.8",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
@@ -21,7 +21,8 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express-partials": "~0.3.0",
-    "sequelize": "~2.1.0",
-    "pg": "~4.3.0"
+    "sequelize": "~2.1.2",
+    "pg": "~4.3.0",
+    "pg-hstore": "~2.3.2"
   }
 }
