--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sequelize": "~2.1.0",
     "pg": "~4.3.0",
     "pg-hstore": "~2.3.2",
-    "sqlite3": "~3.0.8"
+    "sqlite3": "~3.0.8",
+    "method-override": "~2.3.2"
   }
 }
