--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "~4.3.0",
     "pg-hstore": "~2.3.2",
     "sqlite3": "~3.0.8",
-    "method-override": "~2.3.1"
+    "method-override": "~2.3.1",
+    "express-session": "~1.11.2"
   }
 }
