--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg-hstore": "~2.3.2",
     "sqlite3": "~3.0.8",
     "method-override": "~2.3.1",
-    "express-session": "~1.11.2"
+    "express-session": "~1.11.2",
+    "multer": "~0.1.8"
   }
 }
